# ChangeLog for sys-apps/watchdog
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/watchdog/ChangeLog,v 1.31 2011/06/09 01:36:47 vapier Exp $

*watchdog-5.9-r1 (09 Jun 2011)

  09 Jun 2011; Mike Frysinger <vapier@gentoo.org> +watchdog-5.9-r1.ebuild,
  +files/watchdog-5.9-nfs.patch, metadata.xml:
  Control nfs support via USE=nfs to fix building with glibc-2.14 #370655 by
  Diego Elio Pettenò.

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> watchdog-5.4.ebuild,
  watchdog-5.6.ebuild, watchdog-5.9.ebuild:
  Add ~sparc wrt #352232

*watchdog-5.9 (29 Nov 2010)

  29 Nov 2010; Tiziano Müller <dev-zero@gentoo.org> +watchdog-5.9.ebuild:
  Version bump (bug #346851).

  24 Aug 2010; Mike Frysinger <vapier@gentoo.org> files/watchdog-init.d:
  Fix infinite loop bug in get_config #333441 by mario.

  16 May 2009; Mike Frysinger <vapier@gentoo.org> files/watchdog-init.d:
  Use --pidfile with ssd, as well as a better --retry value #269697 by
  Jerome Venturi.

*watchdog-5.6 (22 Mar 2009)

  22 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/watchdog-5.6-headers.patch, +watchdog-5.6.ebuild:
  Version bump.

*watchdog-5.5 (25 Feb 2009)

  25 Feb 2009; Mike Frysinger <vapier@gentoo.org> +watchdog-5.5.ebuild:
  Version bump.

  22 Mar 2008; Joseph Jezak <josejx@gentoo.org> watchdog-5.4.ebuild:
  Marked ppc stable for bug #213809.

  20 Mar 2008; Markus Meier <maekke@gentoo.org> watchdog-5.4.ebuild:
  amd64/x86 stable, bug #213809

  04 Nov 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing myself as the maintainer.

  11 Sep 2007; Christian Heim <phreak@gentoo.org> watchdog-5.4.ebuild:
  Comment the unused epatch for the Debian patch (for now), thanks to Patrizio
  Bassi <hetfield666 at gmail.com> in #192040.

*watchdog-5.4 (09 Sep 2007)

  09 Sep 2007; Christian Heim <phreak@gentoo.org> +watchdog-5.4.ebuild,
  -watchdog-5.4_p1.ebuild: